@@ -5,7 +5,6 @@
 * Wet/dry controls for each slot
 * Display of plugins' execution time
 * ladspa.m4
-* Port connecting
 * Logarithmic controls
 * Custom float widget
 * Reload
@@ -16,6 +15,7 @@
 ----------
 * Arbitrary channel numbers
 * Only display one set of widgets for locked controls
+* Port connecting
 
 
  In 1.1
